--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -51,8 +51,9 @@
 			<span id="uptime#id#"></span>
 		</div>
 		<script>
+			item_uptime = document.querySelector('#uptime#id#');
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
-				item_cnx_ssh.append('<span>#uptime#</span>');
+				item_uptime.append('<span>#uptime#</span>');
 				// $('#uptime#id#').append('<span>#uptime#</span>');
 			}
 		</script>
