--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -53,7 +53,7 @@
 		<script>
 			item_uptime = document.querySelector('#uptime#id#');
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
-				item_uptime.append('<span>#uptime#</span>');
+				item_uptime.innerHTML('<span>#uptime#</span>');
 				// $('#uptime#id#').append('<span>#uptime#</span>');
 			}
 		</script>
