--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -7,36 +7,52 @@
 			<script>
 				const item_cnx_ssh = document.querySelector('#cnx_ssh#');
 				if ('#cnx_ssh#' == 'OK') {
-					item_cnx_ssh.append('<i title="Connexion SSH OK" class="fas fa-check tooltips" style="font-size : 1.1em;color: var(--al-success-color) !important;" ></i>');
+					item_cnx_ssh.innerHTML = '<i title="Connexion SSH OK" class="fas fa-check tooltips" style="font-size : 1.1em;color: var(--al-success-color) !important;" ></i>';
 					// $('#iconSSH#id#').append('<i title="Connexion SSH OK" class="fas fa-check tooltips" style="font-size : 1.1em;color: var(--al-success-color) !important;" ></i>');
 				}
 				if ('#cnx_ssh#' == 'KO') {
-					item_cnx_ssh.append('<i title="Connexion SSH KO" class="fas fa-times tooltips" style="font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
+					item_cnx_ssh.innerHTML = '<i title="Connexion SSH KO" class="fas fa-times tooltips" style="font-size : 1.1em;color: var(--al-danger-color) !important;"></i>';
 					// $('#iconSSH#id#').append('<i title="Connexion SSH KO" class="fas fa-times tooltips" style="font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
 				}
 			</script>
 			<span title="Eteindre l'Equipement" class="poweroff tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="float: right;display: #cmd_poweroff_display#;">
 				<a class="action" style="cursor: pointer;"><i class="fas fa-power-off" style="padding-left:5px;"></i></a>
 				<script>
-					$('.poweroff[data-cmd_id=#cmd_poweroff_id#] .action').on('click', function () {
+					const button_poweroff = document.querySelector('.poweroff[data-cmd_id=#cmd_poweroff_id#] .action');
+					button_poweroff.addEventListener('click', function() {
 						bootbox.confirm('Etes-vous sûr de vouloir éteindre l\'équipement #name# ?', function (result) {
 							if (result) {
 								jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
 							}
 						});
-					});
+					}, false);
+					/* $('.poweroff[data-cmd_id=#cmd_poweroff_id#] .action').on('click', function () {
+						bootbox.confirm('Etes-vous sûr de vouloir éteindre l\'équipement #name# ?', function (result) {
+							if (result) {
+								jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
+							}
+						});
+					}); */ 
 				</script>
 			</span>
 			<span title="Redémarrer l'Equipement" class="reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="float: right;display: #cmd_reboot_display#;">
 				<a class="action" style="cursor: pointer;"><i class="fas fa-redo" style="padding-left:5px;"></i></a>
 				<script>
-					$('.reboot[data-cmd_id=#cmd_reboot_id#] .action').on('click', function () {
+					const button_reboot = document.querySelector('.reboot[data-cmd_id=#cmd_reboot_id#] .action');
+					button_reboot.addEventListener('click', function() {
 						bootbox.confirm('Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?', function (result) {
 							if (result) {
 								jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
 							}
 						});
-					});
+					}, false);
+					/* $('.reboot[data-cmd_id=#cmd_reboot_id#] .action').on('click', function () {
+						bootbox.confirm('Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?', function (result) {
+							if (result) {
+								jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
+							}
+						});
+					}); */ 
 				</script>
 			</span>
 		</span>
