--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -326,7 +326,8 @@
 					}
 				});
 			}); */ 
-
+		</script>
+		<script>
 			const button_reboot = document.querySelector('.reboot[data-cmd_id=#cmd_reboot_id#] .action');
 			button_reboot.addEventListener('click', function() {
 				const confirmMessage = 'Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?';
